major 'final' editing craze

--- a/content/exercises/Exercise_4_2_1_Plotting_Diagnostics.Rmd
+++ b/content/exercises/Exercise_4_2_1_Plotting_Diagnostics.Rmd
@@ -7,7 +7,7 @@ date: 'Introduction to R for Data Analysis'
 ```{r child = "../config/exercises_setup.Rmd"}
 ```
 
-In the following exercises, you will work on your own 'research question' using the GESIS Panel data. You can load the data first using my script (maybe it's useful for you in the following exercises):
+In the following exercises, you will work on your own 'research question' using the GESIS Panel data. If you have not already done so, you can load the data first using the following code:
 
 ```{r load-gp-covid}
 library(haven)
@@ -43,61 +43,57 @@ gp_covid <-
 ```
 
 ```{block, box.title = "1", box.body = list(fill = "white"), box.icon = "fa-star"}
-Please take a minute and choose a dependent variable (DV) and an independent variable (IV) from the [GESIS Panel codebook](https://dbk.gesis.org/dbksearch/download.asp?id=67378).
+Take a few minutes to choose a dependent variable (DV) and an independent variable (IV) from the [GESIS Panel codebook](https://dbk.gesis.org/dbksearch/download.asp?id=67378). Don't overthink your choices!
 ```
 
 ```{block, opts.label = "clues"}
-If you're really struggling finding a proper pair, what about:
+If you're really struggling to find something you like, what about the following variables:
 
-1. hzcy005a as DV and hzcy015a as IV
-2. hzcy026a as DV and age_cat as IV
-3. hzcy072a as DV and sex
+1. hzcy005a (risk of infecting others) as DV and hzcy015a (wearing a mask) as IV
+2. hzcy026a (obeying curfew) as DV and age_cat as IV
+3. hzcy072a (staying home for childcare) as DV and sex IV
 
-Be aware that you may have to conduct some recoding, and that your sample gets reduced due to filter questions.
+Be aware that you may have to do some recoding, and that your sample is likely reduced due to filter questions.
 ```
 
 ```{r first-exercise, solution = TRUE}
-# I will use option 2
+# We will use option 2 from the list in the clues in the following.
 ```
 
 ```{block, box.title = "2", box.body = list(fill = "white"), box.icon = "fa-star"}
-Run a linear regression model with your variables and `education_cat` as covariate If it is part of your variables take any other...). Then check visually if the residuals are normally distributed.
+Run a linear regression model with your variables and `education_cat` as covariate. If it is part of your predictor variables (IV), choose another one. Then check visually if the residuals are normally distributed.
 ```
 
 ```{block, opts.label = "clues"}
-You need the `performance` and `see` package.
+You need the `performance` and `see` packages for this task (and `dplyr` for the preparatory wrangling part).
 ```
 
 ```{r second-exercise, solution = TRUE}
-library(dplyr)
 library(performance)
 library(see)
 
 gp_covid <-
-  gp_covid %>% 
-  dplyr::mutate(
-    curfew_yes_no = 
-      case_when(
-        hzcy026a == 2 ~ 0,
-        hzcy026a == 1 ~ 1,
-      )
-  )
+  gp_covid %>%
+  mutate(curfew_yes_no = case_when(
+    hzcy026a == 2 ~ 0,
+    hzcy026a == 1 ~ 1
+    )
+    )
 
 linear_model <-
   lm(
     curfew_yes_no ~ age_cat + education_cat,
     data = gp_covid
-  )
+    )
 
-check_normality(linear_model) %>% 
+check_normality(linear_model) %>%
   plot()
 ```
 
 ```{block, box.title = "3", box.body = list(fill = "white"), box.icon = "fa-star"}
-Now, use the whole battery of regression diagnostics with the `check_model()` command.
+Now, do the full range of model checks using a function from the `performance` package.
 ```
 
 ```{r third-exercise, solution = TRUE}
 check_model(linear_model)
 ```
-
